maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:49: error: type mismatch;
 found   : String("hello")
 required: Int
    setIndication(0,0,"hello")
                      ^